--- a/src/main/resources/templates/Test.html
+++ b/src/main/resources/templates/Test.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="../static/css/styles.css">
 </head>
 <body>
-
-    <h1>Test file</h1>
+    <div class="mx-auto container">
+        <div class="flex flex-col justify-center items-center">
+            <h1 class="text-4xl">Test file</h1>
+            <h2>hello world</h2>
+            <p>hello</p>
+        </div>
+    </div>
 
 </body>
 </html>
