--- a/src/main/resources/templates/LeaveApplicationSubmit.html
+++ b/src/main/resources/templates/LeaveApplicationSubmit.html
@@ -1,29 +1,43 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leave Application Form</title>
-    <link href="../css/styles.css" rel="stylesheet">
+    <link th:href="@{css/styles.css}" rel="stylesheet" type="text/css" />
 </head>
 <body class="bg-gray-100">
     <div class="container mx-auto p-8">
-        <div class="max-w-md mx-auto bg-white rounded-lg overflow-hidden md:max-w-lg">
+        <div class="max-w-md mx-auto bg-white rounded-lg overflow-hidden md:max-w-screen-sm">
             <div class="md:flex">
+                <div class="items-center flex flex-col bg-white px-11 py-4 border-b-[0.889px] border-solid max-md:max-w-full max-md:px-5">
+                    <div class="">
+                    <h1 class="font-bold text-2xl">Leave Application Processing System</h1>
+                        <div class="py-2 w-full">
+                            <span class="text-sm">Welcome</span>
+                            <span class="text-sm font-bold">User</span>
+                        </div>
+                    </div>
+                    <img th:src="@{img/application.png}" alt="drawing" class="my-4 hidden md:block">
+                    <div class="flex items-center justify-center my-5 w-full">
+                        <div class="bg-red-300 hover:bg-red-500 text-white text-center font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full">
+                            <a href="/dashboard">go back to dashboard</a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="w-full p-4">
                     <div class="relative">
                         <div class="text-lg text-gray-700 font-semibold">Leave Application Form</div>
                         <form class="mt-4">
                             <div class="mb-4">
                                 <label class="block text-gray-700 text-sm font-bold mb-2" for="leaveType">
-                                    Leave Type
+                                    Select Leave Type
                                 </label>
                                 <select id="leaveType" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
                                     <option>Annual Leave</option>
                                     <option>Medical Leave</option>
                                     <option>Compensation Leave</option>
-                                    <option>Other</option>
                                 </select>
                             </div>
                             <div class="mb-4">
@@ -50,8 +64,8 @@
                                 </label>
                                 <input type="text" id="contactInfo" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Phone number or email">
                             </div>
-                            <div class="flex items-center justify-between">
-                                <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+                            <div class="flex items-center justify-center">
+                                <button class="bg-indigo-400 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full" type="submit">
                                     Submit Application
                                 </button>
                             </div>
