--- a/src/main/resources/templates/leavetype-list.html
+++ b/src/main/resources/templates/leavetype-list.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Leave Type List Page</title>
-	<link th:href="@{css/styles.css}" rel="stylesheet" type="text/css" />
+	<link th:href="@{../css/styles.css}" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
