--- a/src/main/resources/templates/Test.html
+++ b/src/main/resources/templates/Test.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <div class="mx-auto container">
         <div class="flex flex-col justify-center items-center">
             <h1 class="text-4xl">Test file</h1>
             <h2>hello world</h2>
-            <p>hello</p>
+            <p >hello</p>
         </div>
     </div>
 
