--- a/src/main/resources/templates/leavetype-edit.html
+++ b/src/main/resources/templates/leavetype-edit.html
@@ -3,37 +3,46 @@
 
 <head th:replace="fragments/layout.html :: html_head" />
 
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title >Edit Leave Type page</title>
+	<!--<link th:href="@{../css/styles.css}" rel="stylesheet" type="text/css" />-->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	
+</head>
+
 <body>
-
-	<div th:replace="fragments/layout.html :: menu" />
-	<div th:replace="fragments/layout.html :: header" />
-	<h3>Edit Role page</h3>
-
-	<form action="#" th:action="@{/leavetype/editDetails/}+${leaveType.Id}" th:object="${leaveType}" method="post">
-		<table>
-			<tbody>
+	<!--<div th:replace="fragments/layout.html :: menu" />-->
+	<!--<div th:replace="fragments/layout.html :: header" />-->
+	<h3 class="text-primary">Edit Leave page</h3>
+	<div class="container">
+		<form class="mx-auto p-2" action="#" th:action="@{/leavetype/editDetails/}+${leaveType.Id}" th:object="${leaveType}"
+			method="post">
+			<table>
 				<tr>
 					<td><span th:text="#{fieldLabel.leaveTypeId}"></span></td>
-					<td><input type="text" th:field="*{Id}" /></td>
+					<td><input class="form-control" type="text" th:field="*{Id}" /></td>
 				</tr>
 				<tr>
 					<td><span th:text="#{fieldLabel.leaveTypeName}"></span></td>
-					<td><input type="text" th:field="*{name}" /></td>
+					<td><input class="form-control" type="text" th:field="*{name}" /></td>
 				</tr>
 				<tr>
 					<td><span th:text="#{fieldLabel.leaveTypeRoleName}"></span></td>
-					<td><input type="text" th:field="*{roleName}" /></td>
+					<td><input class="form-control" type="text" th:field="*{roleName}" /></td>
 				</tr>
 				<tr>
 					<td><span th:text="#{fieldLabel.leaveTypeentitledNum}"></span></td>
-					<td><input type="text" th:field="*{entitledNum}" /></td>
+					<td><input class="form-control" type="text" th:field="*{entitledNum}" /></td>
 					<td th:if="${#fields.hasErrors('entitledNum')}">
 						<span th:errors="*{entitledNum}"></span>
 					</td>
 				</tr>
 				<tr>
-					<td><input type="submit" value="Update" class="blcass" /></td>
+					<td><input type="submit" value="Update" class="btn btn-primary mt-3" /></td>
 				</tr>
-			</tbody>
-		</table>
-	</form>
+			</table>
+		</form>
+	</div>
