--- a/src/main/resources/templates/leavetype-edit.html
+++ b/src/main/resources/templates/leavetype-edit.html
@@ -46,3 +46,6 @@
 			</table>
 		</form>
 	</div>
+	<div class="text-center">
+	<a href="/dashboard" class="btn btn-info">Go back to dashboard</a>
+	</div>
