--- a/src/main/resources/templates/leavetype-list.html
+++ b/src/main/resources/templates/leavetype-list.html
@@ -58,5 +58,7 @@
 		</div>
 	</div>
 </body>
-
+<div class="text-center">
+	<a href="/dashboard" class="btn btn-info">Go back to dashboard</a>
+</div>
 </html>
