--- a/src/main/resources/templates/publicholidays-list.html
+++ b/src/main/resources/templates/publicholidays-list.html
@@ -27,7 +27,8 @@
 			</tbody>
 		</table>
 	</div>
-
 </body>
-
+<div class="text-center">
+	<a href="/dashboard" class="btn btn-info">Go back to dashboard</a>
+</div>
 </html>
