--- a/src/main/resources/templates/role-list.html
+++ b/src/main/resources/templates/role-list.html
@@ -31,5 +31,7 @@
 		</div>
 	</div>
 </body>
-
+<div class="text-center">
+	<a href="/dashboard" class="btn btn-info">Go back to dashboard</a>
+</div>
 </html>
