--- a/src/main/resources/templates/publicholidays-list.html
+++ b/src/main/resources/templates/publicholidays-list.html
@@ -3,12 +3,14 @@
 
 <head>
 	<title>Public Holidays</title>
-	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 
 <body>
+<div class="text-center">
+	<a href="/publicholidays/create" class="btn btn-secondary">Add Public Holiday</a>
+</div>
 
 	<div class="container mt-5">
 		<h3 class="text-primary">Public Holidays</h3>
@@ -23,6 +25,10 @@
 				<tr th:each="holiday : ${publicHolidays}">
 					<td th:text="${holiday.name}"></td>
 					<td th:text="${#temporals.format(holiday.date, 'dd-MM-yyyy')}"></td>
+					<td><a th:href="@{/publicholidays/edit/}+${holiday.id}" class="btn btn-primary">
+						<span th:text="#{caption.edit}"></span></a></td>
+					<td><a th:href="@{/publicholidays/delete/}+${holiday.id}" class="btn btn-primary">
+						<span th:text="#{caption.delete}"></span></a></td>
 				</tr>
 			</tbody>
 		</table>
