--- a/src/main/resources/templates/LeaveApplicationSubmit.html
+++ b/src/main/resources/templates/LeaveApplicationSubmit.html
@@ -35,9 +35,9 @@
                                     Select Leave Type
                                 </label>
                                 <select id="leaveType" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-                                    <option>Annual Leave</option>
-                                    <option>Medical Leave</option>
-                                    <option>Compensation Leave</option>
+                                    <option>Annual</option>
+                                    <option>Medical</option>
+                                    <option>Compensation</option>
                                 </select>
                             </div>
                             <div class="mb-4">
