--- a/src/main/resources/templates/LeaveApplicationSubmit.html
+++ b/src/main/resources/templates/LeaveApplicationSubmit.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leave Application Form</title>
     <link th:href="@{/css/styles.css}" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100">
     <div class="container mx-auto p-8">
